--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@capacitor/android": "^3.2.5",
     "@capacitor/app": "^1.0.5",
     "@capacitor/core": "^3.2.5",
     "@capacitor/haptics": "^1.1.2",
+    "@capacitor/ios": "^3.2.5",
     "@capacitor/keyboard": "^1.1.2",
     "@capacitor/status-bar": "^1.0.5",
     "@ionic/angular": "^6.0.0-rc.0",
+    "cordova-plugin-ionic": "^5.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
