--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/haptics": "^1.1.2",
     "@capacitor/ios": "^3.2.5",
     "@capacitor/keyboard": "^1.1.2",
+    "@capacitor/push-notifications": "^1.0.6",
     "@capacitor/status-bar": "^1.0.5",
     "@ionic/angular": "^6.0.0-rc.0",
     "cordova-plugin-ionic": "^5.5.1",
