--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/push-notifications": "^1.0.6",
     "@capacitor/splash-screen": "^1.1.6",
     "@capacitor/status-bar": "^1.0.5",
+    "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^6.0.0-rc.2",
     "cordova-plugin-ionic": "^5.5.1",
     "rxjs": "~6.6.0",
