--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/haptics": "^1.1.2",
     "@capacitor/ios": "^3.2.5",
     "@capacitor/keyboard": "^1.1.2",
+    "@capacitor/local-notifications": "^1.0.9",
     "@capacitor/push-notifications": "^1.0.6",
     "@capacitor/splash-screen": "^1.1.6",
     "@capacitor/status-bar": "^1.0.5",
