--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -2,5 +2,10 @@
 	"appId": "io.ionic.conferences.eas2021",
 	"appName": "enterprise-summit-2021",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"cordova": {
+		"preferences": {
+			"DisableDeploy": "true"
+		}
+	}
 }
