--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,10 +2,5 @@
 	"appId": "io.ionic.conferences.eas2021",
 	"appName": "enterprise-summit-2021",
 	"webDir": "www",
-	"bundledWebRuntime": false,
-	"cordova": {
-		"preferences": {
-			"DisableDeploy": "true"
-		}
-	}
+	"bundledWebRuntime": false
 }
