--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,11 @@
 {
 	"appId": "io.ionic.conferences.eas2021",
-	"appName": "enterprise-summit-2021",
+	"appName": "EAS 21",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"cordova": {
+		"preferences": {
+			"DisableDeploy": "true"
+		}
+	}
 }
