--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "io.ionic.conferences.eas2021",
-	"appName": "enterprise-summit-2021",
+	"appName": "EAS 21",
 	"webDir": "www",
 	"bundledWebRuntime": false
 }
