--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enterprise-summit-2021",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Ionic",
   "homepage": "https://ionic.io/events/enterprise-app-summit-21",
   "scripts": {
@@ -31,6 +31,7 @@
     "@capacitor/push-notifications": "^1.0.6",
     "@capacitor/splash-screen": "^1.1.6",
     "@capacitor/status-bar": "^1.0.5",
+    "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^6.0.0-rc.3",
     "cordova-plugin-ionic": "^5.5.1",
     "rxjs": "~6.6.0",
