--- a/package.json
+++ b/package.json
@@ -14,42 +14,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~13.0.3",
-    "@angular/core": "~13.0.3",
-    "@angular/forms": "~13.0.3",
-    "@angular/platform-browser": "~13.0.3",
-    "@angular/platform-browser-dynamic": "~13.0.3",
-    "@angular/router": "~13.0.3",
-    "@capacitor/android": "^3.2.5",
-    "@capacitor/app": "^1.0.5",
-    "@capacitor/browser": "^1.0.6",
-    "@capacitor/core": "^3.2.5",
-    "@capacitor/haptics": "^1.1.2",
-    "@capacitor/ios": "^3.2.5",
-    "@capacitor/keyboard": "^1.1.2",
-    "@capacitor/local-notifications": "^1.0.9",
-    "@capacitor/push-notifications": "^1.0.6",
-    "@capacitor/splash-screen": "^1.1.6",
-    "@capacitor/status-bar": "^1.0.5",
-    "@capacitor/storage": "^1.2.3",
-    "@ionic/angular": "^6.0.1",
-    "cordova-plugin-ionic": "^5.5.1",
+    "@angular/common": "~13.3.5",
+    "@angular/core": "~13.3.5",
+    "@angular/forms": "~13.3.5",
+    "@angular/platform-browser": "~13.3.5",
+    "@angular/platform-browser-dynamic": "~13.3.5",
+    "@angular/router": "~13.3.5",
+    "@capacitor/android": "3.5.0",
+    "@capacitor/app": "1.1.1",
+    "@capacitor/browser": "1.0.7",
+    "@capacitor/core": "3.5.0",
+    "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "3.5.0",
+    "@capacitor/keyboard": "1.2.2",
+    "@capacitor/local-notifications": "1.1.0",
+    "@capacitor/push-notifications": "1.0.9",
+    "@capacitor/splash-screen": "1.2.2",
+    "@capacitor/status-bar": "1.0.8",
+    "@capacitor/storage": "1.2.5",
+    "@ionic/angular": "6.1.3",
+    "cordova-plugin-ionic": "5.5.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
-    "@angular-eslint/builder": "~13.0.1",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "^13.0.1",
-    "@angular-eslint/template-parser": "^13.0.1",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler": "~13.0.3",
-    "@angular/compiler-cli": "~13.0.3",
-    "@angular/language-service": "~13.0.3",
-    "@capacitor/cli": "^3.2.5",
-    "@ionic/angular-toolkit": "^5.0.4-testing.4",
+    "@angular-devkit/build-angular": "~13.3.4",
+    "@angular-eslint/builder": "13.2.1",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
+    "@angular/cli": "~13.3.4",
+    "@angular/compiler": "~13.3.5",
+    "@angular/compiler-cli": "~13.3.5",
+    "@angular/language-service": "~13.3.5",
+    "@capacitor/cli": "3.5.0",
+    "@ionic/angular-toolkit": "6.1.0",
+    "@ionic/cli": "6.19.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -67,7 +68,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.4.4"
   },
