--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@capacitor/splash-screen": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "1.2.5",
+    "@ionic-enterprise/auth": "3.9.2",
+    "@ionic-enterprise/identity-vault": "5.7.1",
     "@ionic/angular": "6.1.3",
     "cordova-plugin-ionic": "5.5.2",
     "rxjs": "~6.6.0",
