--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enterprise-summit-2021",
+  "name": "enterprise-summit",
   "version": "1.1.0",
   "author": "Ionic",
   "homepage": "https://ionic.io/events/enterprise-app-summit-21",
