--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -25,7 +25,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>ionic.cs</string>
+				<string>ionic.cs.appsummit</string>
 			</array>
 		</dict>
 	</array>
