--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "@angular/platform-browser": "~13.3.5",
     "@angular/platform-browser-dynamic": "~13.3.5",
     "@angular/router": "~13.3.5",
-    "@capacitor/android": "3.5.0",
-    "@capacitor/app": "1.1.1",
-    "@capacitor/browser": "1.0.7",
-    "@capacitor/core": "3.5.0",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/ios": "3.5.0",
-    "@capacitor/keyboard": "1.2.2",
-    "@capacitor/local-notifications": "1.1.0",
-    "@capacitor/push-notifications": "1.0.9",
-    "@capacitor/splash-screen": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
-    "@capacitor/storage": "1.2.5",
+    "@capacitor/android": "4.4.0",
+    "@capacitor/app": "4.1.0",
+    "@capacitor/browser": "4.0.1",
+    "@capacitor/core": "4.4.0",
+    "@capacitor/haptics": "4.0.1",
+    "@capacitor/ios": "4.4.0",
+    "@capacitor/keyboard": "4.0.1",
+    "@capacitor/local-notifications": "4.1.2",
+    "@capacitor/preferences": "4.0.1",
+    "@capacitor/push-notifications": "4.1.1",
+    "@capacitor/splash-screen": "4.1.1",
+    "@capacitor/status-bar": "4.0.1",
     "@ionic-enterprise/auth": "3.9.4",
     "@ionic-enterprise/identity-vault": "5.7.2",
     "@ionic/angular": "6.1.4",
@@ -49,7 +49,7 @@
     "@angular/compiler": "~13.3.5",
     "@angular/compiler-cli": "~13.3.5",
     "@angular/language-service": "~13.3.5",
-    "@capacitor/cli": "3.5.0",
+    "@capacitor/cli": "4.4.0",
     "@ionic/angular-toolkit": "6.1.0",
     "@ionic/cli": "6.19.0",
     "@types/jasmine": "~3.6.0",
