--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~13.3.5",
-    "@angular/core": "~13.3.5",
-    "@angular/forms": "~13.3.5",
-    "@angular/platform-browser": "~13.3.5",
-    "@angular/platform-browser-dynamic": "~13.3.5",
-    "@angular/router": "~13.3.5",
+    "@angular/common": "^14.2.8",
+    "@angular/core": "^14.2.8",
+    "@angular/forms": "^14.2.8",
+    "@angular/platform-browser": "^14.2.8",
+    "@angular/platform-browser-dynamic": "^14.2.8",
+    "@angular/router": "^14.2.8",
     "@capacitor/android": "4.4.0",
     "@capacitor/app": "4.1.0",
     "@capacitor/browser": "4.0.1",
@@ -34,24 +34,24 @@
     "@capacitor/status-bar": "4.0.1",
     "@ionic-enterprise/auth": "3.9.5",
     "@ionic-enterprise/identity-vault": "5.9.3",
-    "@ionic/angular": "6.1.4",
+    "@ionic/angular": "6.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.4",
-    "@angular-eslint/builder": "13.2.1",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "~13.3.4",
-    "@angular/compiler": "~13.3.5",
-    "@angular/compiler-cli": "~13.3.5",
-    "@angular/language-service": "~13.3.5",
+    "@angular-devkit/build-angular": "^14.2.7",
+    "@angular-eslint/builder": "14.1.2",
+    "@angular-eslint/eslint-plugin": "14.1.2",
+    "@angular-eslint/eslint-plugin-template": "14.1.2",
+    "@angular-eslint/template-parser": "14.1.2",
+    "@angular/cli": "^14.2.7",
+    "@angular/compiler": "^14.2.8",
+    "@angular/compiler-cli": "^14.2.8",
+    "@angular/language-service": "^14.2.8",
     "@capacitor/cli": "4.4.0",
-    "@ionic/angular-toolkit": "6.1.0",
-    "@ionic/cli": "6.19.0",
+    "@ionic/angular-toolkit": "7.0.0",
+    "@ionic/cli": "6.20.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -71,7 +71,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.8.4"
   },
   "description": "Conference app for the 2021 Ionic Enterprise App Summit"
 }
