--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -3,6 +3,7 @@ ext {
     compileSdkVersion = 32
     targetSdkVersion = 32
     androidxActivityVersion = '1.4.0'
+    coreSplashScreenVersion = '1.0.0'
     androidxAppCompatVersion = '1.4.2'
     androidxCoordinatorLayoutVersion = '1.2.0'
     androidxCoreVersion = '1.8.0'
