--- a/package.json
+++ b/package.json
@@ -14,64 +14,64 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^14.2.8",
-    "@angular/core": "^14.2.8",
-    "@angular/forms": "^14.2.8",
-    "@angular/platform-browser": "^14.2.8",
-    "@angular/platform-browser-dynamic": "^14.2.8",
-    "@angular/router": "^14.2.8",
-    "@capacitor/android": "4.4.0",
-    "@capacitor/app": "4.1.0",
-    "@capacitor/browser": "4.0.1",
-    "@capacitor/core": "4.4.0",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/ios": "4.4.0",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/local-notifications": "4.1.2",
-    "@capacitor/preferences": "4.0.1",
-    "@capacitor/push-notifications": "4.1.1",
-    "@capacitor/splash-screen": "4.1.1",
-    "@capacitor/status-bar": "4.0.1",
+    "@angular/common": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
+    "@capacitor/android": "4.6.1",
+    "@capacitor/app": "4.1.1",
+    "@capacitor/browser": "4.1.0",
+    "@capacitor/core": "4.6.1",
+    "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.6.1",
+    "@capacitor/keyboard": "4.1.0",
+    "@capacitor/local-notifications": "4.1.4",
+    "@capacitor/preferences": "4.0.2",
+    "@capacitor/push-notifications": "4.1.2",
+    "@capacitor/splash-screen": "4.1.2",
+    "@capacitor/status-bar": "4.1.1",
     "@ionic-enterprise/auth": "3.9.5",
-    "@ionic-enterprise/identity-vault": "5.9.3",
-    "@ionic/angular": "6.3.3",
+    "@ionic-enterprise/identity-vault": "5.9.4",
+    "@ionic/angular": "6.3.9",
     "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "tslib": "2.4.1",
+    "zone.js": "0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.7",
-    "@angular-eslint/builder": "14.1.2",
-    "@angular-eslint/eslint-plugin": "14.1.2",
-    "@angular-eslint/eslint-plugin-template": "14.1.2",
-    "@angular-eslint/template-parser": "14.1.2",
-    "@angular/cli": "^14.2.7",
-    "@angular/compiler": "^14.2.8",
-    "@angular/compiler-cli": "^14.2.8",
-    "@angular/language-service": "^14.2.8",
-    "@capacitor/cli": "4.4.0",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler": "^14.2.12",
+    "@angular/compiler-cli": "^14.2.12",
+    "@angular/language-service": "^14.2.12",
+    "@capacitor/cli": "4.6.1",
     "@ionic/angular-toolkit": "7.0.0",
-    "@ionic/cli": "6.20.3",
-    "@types/jasmine": "~3.6.0",
+    "@ionic/cli": "6.20.4",
+    "@types/jasmine": "3.10.7",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
+    "@types/node": "12.20.55",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "cordova-res": "0.15.4",
     "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.8.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsdoc": "30.7.13",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jasmine-core": "3.99.1",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma": "6.4.1",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-coverage": "2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "4.0.2",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.8.4"
+    "ts-node": "8.10.2",
+    "typescript": "4.8.3"
   },
   "description": "Conference app for the 2021 Ionic Enterprise App Summit"
 }
