--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -19,7 +19,8 @@ dependencies {
     implementation project(':capacitor-splash-screen')
     implementation project(':capacitor-status-bar')
     implementation project(':ionic-enterprise-auth')
-
+    implementation "net.zetetic:android-database-sqlcipher:4.5.2"
+    implementation "androidx.sqlite:sqlite:2.0.1"
 }
 apply from: "../../node_modules/@ionic-enterprise/identity-vault/src/android/ionicnativeauth.gradle"
 
