--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "@angular/platform-browser": "~13.0.3",
     "@angular/platform-browser-dynamic": "~13.0.3",
     "@angular/router": "~13.0.3",
-    "@capacitor/android": "^3.2.5",
-    "@capacitor/app": "^1.0.5",
-    "@capacitor/browser": "^1.0.6",
-    "@capacitor/core": "^3.2.5",
-    "@capacitor/haptics": "^1.1.2",
-    "@capacitor/ios": "^3.2.5",
-    "@capacitor/keyboard": "^1.1.2",
-    "@capacitor/local-notifications": "^1.0.9",
-    "@capacitor/push-notifications": "^1.0.6",
-    "@capacitor/splash-screen": "^1.1.6",
-    "@capacitor/status-bar": "^1.0.5",
-    "@capacitor/storage": "^1.2.3",
+    "@capacitor/android": "4.8.0",
+    "@capacitor/app": "4.1.1",
+    "@capacitor/browser": "4.1.1",
+    "@capacitor/core": "4.8.0",
+    "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.8.0",
+    "@capacitor/keyboard": "4.1.1",
+    "@capacitor/local-notifications": "4.1.5",
+    "@capacitor/preferences": "4.0.2",
+    "@capacitor/push-notifications": "4.1.2",
+    "@capacitor/splash-screen": "4.2.0",
+    "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.0.1",
     "cordova-plugin-ionic": "^5.5.1",
     "rxjs": "~6.6.0",
@@ -48,7 +48,7 @@
     "@angular/compiler": "~13.0.3",
     "@angular/compiler-cli": "~13.0.3",
     "@angular/language-service": "~13.0.3",
-    "@capacitor/cli": "^3.2.5",
+    "@capacitor/cli": "4.8.0",
     "@ionic/angular-toolkit": "^5.0.4-testing.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
