--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~13.0.3",
     "@angular/platform-browser-dynamic": "~13.0.3",
     "@angular/router": "~13.0.3",
+    "@capacitor-community/bluetooth-le": "2.2.3",
+    "@capacitor-community/keep-awake": "3.0.0",
     "@capacitor/android": "4.8.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/browser": "4.1.1",
