--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enterprise-summit-2021",
+  "name": "my-capacitor-app",
   "version": "1.1.0",
   "author": "Ionic",
   "homepage": "https://ionic.io/events/enterprise-app-summit-21",
@@ -69,7 +69,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.4.4"
   },
